overflow issue fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,11 +65,11 @@ body {
 }
 
 .background-container {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
-  bottom: 0;
   right: 0;
+  min-height: 100vh;
 }
 
 .stars {
@@ -77,7 +77,6 @@ body {
     url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/stars.png) repeat;
   position: absolute;
   top: 0;
-  bottom: 0;
   left: 0;
   right: 0;
   display: block;
@@ -86,7 +85,6 @@ body {
 
 .twinkling {
   width: 10000px;
-  height: 100%;
   background: transparent
     url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/twinkling.png")
     repeat;
@@ -94,7 +92,6 @@ body {
   position: absolute;
   right: 0;
   top: 0;
-  bottom: 0;
   z-index: 2;
 
   -moz-animation: move-background 70s linear infinite;
@@ -106,7 +103,6 @@ body {
 
 .clouds {
   width: 10000px;
-  height: 100%;
   background: transparent
     url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/clouds_repeat.png")
     repeat;
@@ -114,7 +110,6 @@ body {
   position: absolute;
   right: 0;
   top: 0;
-  bottom: 0;
   z-index: 3;
 
   -moz-animation: move-background 150s linear infinite;
